syntax = "proto3";

option csharp_namespace = "todo_grpc_service";

package todoit;

service ToDoIt{
	//Create
	rpc CreateToDo(CreateTodoRequest) returns (CreateTodoResponse){}
	
	//Read Single
	
	rpc ReadToDo(ReadTodoRequest) returns (ReadTodoResponse){}
	
	// Read List

	rpc ListToDo(GetAllRequest) returns (GetAllResponse){}
	
	// Update
	
	rpc UpdateToDo(UpdateTodoRequest) returns (UpdateTodoResponse){}

	//Delete

	rpc DeleteToDo(DeleteTodoRequest) returns (DeleteTodoResponse){}
}


message CreateTodoRequest{
	string title = 1;
	string description = 2;
}

message CreateTodoResponse{
	int32 id = 1;
}

message ReadTodoRequest{
	int32 id = 1;
}

message ReadTodoResponse{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
	string created_date = 5;
	string updated_date = 6;
}

message GetAllRequest{}

message GetAllResponse{
	repeated ReadTodoResponse to_do = 1;
}

message UpdateTodoRequest{
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
}

message UpdateTodoResponse{
	int32 id = 1;
}

message DeleteTodoRequest{
	int32 id = 1;
}

message DeleteTodoResponse{
	int32 id = 1;
}